--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					</section>
 					<section id="one">
 						<div class="inner"> 
-							<p>I am a student at Lehigh University majoring in computer science, graduating in 2026. I am currently working as a research intern at Old Dominion University working on disinformation analytics.</p>
+							<p>I am a student at Lehigh University majoring in computer science, graduating in 2026. I am currently a research intern at Old Dominion University working on disinformation analytics.</p>
 						</div>
 					</section>
 
